--- a/app/views/game.html
+++ b/app/views/game.html
@@ -33,7 +33,7 @@
                 <div id="playerSettings" class="settings-menu">
                     <fieldset>
                         <legend>Player Settings</legend>
-                        <label id="invalid-player-name-label">Please Enter a Valid Name (10 Characters Max)</label>
+                        <label id="invalid-player-name-label">Please Enter a Name (10 Characters Max)</label>
                         <ul class="text-button-list">
                             <li><input id="volumeSlider" type="range" min="0" max="1" step="0.2" value="1"></input><img src="assets/volume-icon.png" class="volume-icon"></img></li>
                             <li><button id="toggleSoundButton" class="options-text-button" title="Mute or unmute sound">Mute</button></li>
