--- a/app/views/game.html
+++ b/app/views/game.html
@@ -11,7 +11,7 @@
             <div class="navigation">
                 <label class="nav-label">You are <input id="player-name" readonly="readonly" maxlength="10"></input></label>
                 <div class="nav-button-bar">
-                    <a href="#top" id="play-or-watch-button" title="Spectate or rejoin game">Watch</a>
+                    <a href="#top" id="play-or-watch-button" title="Spectate or rejoin game">Spectate</a>
                     <a href="#playerSettings" title="Go to settings">Settings</a>
                     <button id="full-screen-button" title="Go into full-screen mode"/>
                 </div>
